--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -76,7 +76,13 @@ header {
   justify-content: center;
   li {
     list-style: none;
-    padding-right: 25px;
+    padding: 0 15px;
+    a {
+      text-decoration: none;
+      img {
+        margin: 10px 0 0;
+      }
+    }
   }
 }
 .title-h4 {
@@ -84,4 +90,50 @@ header {
   width: 40%;
   margin: auto;
   padding: 20px 0;
+  line-height: 30px;
+  font-size: 21px;
+}
+.alert {
+  color: red;
+  font-size: 21px;
+}
+.success {
+  color: green;
+  font-size: 21px;
+}
+section {
+  padding: 0 15px;
+  .container {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 50px 0;
+  }
+}
+.proceed {
+  padding: 30px 0;
+  display: inline-block;
+  .btn {
+    border-radius: 10px;
+    color: #fff;
+    background-color: #00436d;
+    padding: 15px 50px;
+    display: inline-block;
+    text-decoration: none;
+    margin: 0 0 20px;
+  }
+}
+
+/*** Responsive for mobile ***/
+@media only screen and (max-width: 767px) {
+  header {
+    padding: 25px 0;
+  }
+  section .container {
+    padding-bottom: 0;
+  }
+  .title-h4 {
+    width: 90%;
+    font-size: 18px;
+    line-height: 24px;
+  }
 }
