--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,5 +147,8 @@ section .container {
     font-size: 18px;
     line-height: 24px;
   }
+  .flex-ul li a {
+    font-size: 18px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
